--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@better-scroll/pull-up": "^2.3.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
+    "lazyload": "^2.0.0-rc.2",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
