--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
     "lazyload": "^2.0.0-rc.2",
+    "vant": "^2.12.20",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.3",
     "vue-template-compiler": "^2.6.11"
   }
 }
